--- a/templates/named.conf.options.j2
+++ b/templates/named.conf.options.j2
@@ -21,7 +21,7 @@ options {
         // the all-0's placeholder.
 
         forwarders {
-		{% for ip in forwarders %}
+		{% for ip in bind_forwarders %}
 		{{ ip }};
 		{% endfor %}
         };
