--- a/templates/db.192.168.j2
+++ b/templates/db.192.168.j2
@@ -1,6 +1,6 @@
 $TTL	604800
 @	IN	SOA	ns1.{{ home_domain }}.	ns2.{{ home_domain }}.	(
-			{{ serial_bind }}		; Serial
+			{{ bind_serial }}		; Serial
 			604800		; Refresh
 			86400		; Retry
 			2419200	; Expire
